// Genration command:
// /Users/folex/Downloads/scalapbc-0.8.3/bin/scalapbc -I/usr/local/Cellar/protobuf/3.7.1/include --scala_out=/Users/folex/Development/fluencelabs/fluence-main/effects/tendermint-block/src/main/scala/ -I$(pwd) tendermint.proto

syntax = "proto3";

import "google/protobuf/timestamp.proto";

package proto3;

message PartSetHeader {
    int32 total = 1;
    bytes hash = 2;
}

message BlockID {
    bytes hash = 1;
    PartSetHeader parts = 2;
}

//message Timestamp {
//    int64 seconds = 1;
//    int32 nanos = 2;
//}

message Vote {
    int32 type = 1; // it should be of `byte` type, actually, so int32 may be incorrect. TODO: check
    int64 height = 2;
    int32 round = 3;
    BlockID block_id = 4 [json_name = "block_id"];
    google.protobuf.Timestamp timestamp = 5;
    bytes validator_address = 6 [json_name = "validator_address"];
    int32 validator_index = 7 [json_name = "validator_index"];
    bytes signature = 8;
}

// ======================= from Tendermint's block.proto
message Header {
    // basic block info
    Version version = 1;
    string chain_id = 2;
    int64 height = 3;
    google.protobuf.Timestamp time = 4;
    int64 num_txs = 5;
    int64 total_txs = 6;

    // prev block info
    BlockID last_block_id = 7;

    // hashes of block data
    bytes last_commit_hash = 8; // commit from validators from the last block
    bytes data_hash = 9; // transactions

    // hashes from the app output from the prev block
    bytes validators_hash = 10; // validators for the current block
    bytes next_validators_hash = 11; // validators for the next block
    bytes consensus_hash = 12; // consensus params for current block
    bytes app_hash = 13; // state after txs from the previous block
    bytes last_results_hash = 14; // root hash of all results from the txs from the previous block

    // consensus info
    bytes evidence_hash = 15; // evidence included in the block
    bytes proposer_address = 16; // original proposer of the block
}

message Version {
    uint64 Block = 1;
    uint64 App = 2;
}